# cool_school

./: .env.example  .gitignore  CHATKIT_ADAPTER_PROTOCOL.md  DOCKER_README.md  README.md  TECHNICAL_IMPLEMENTATION.md  docker-compose.override.yml  docker-compose.yml  start-docker.sh
backend/: ARCHITECTURE.md  Dockerfile  docker_integration_check.py  pyproject.toml
backend/app/: agent_utils.py  config.py  core_tools.py  database.py  db_models.py  langgraph_agent.py  langgraph_context.py  langgraph_decorators.py  langgraph_server.py  langgraph_tool_inputs.py  langgraph_tools.py  lg_tool_decorator.py  main.py  migration.py  models.py  openai_agent.py  openai_server.py  openai_tool_inputs.py  openai_tools.py  postgres_store.py  run_langgraph_wrapper.py  schedule_repository.py  schedule_state.py  schemas.py  settings.py  support_agent.py  tool_inputs.py  tool_responses.py
backend/app/routers/: __init__.py  schedule.py
backend/chatkit_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: test_agent_comparison.py  test_integration.py  test_langgraph.py  test_pydantic.py  test_pydantic_models.py  test_rebalancing.py  test_schemas.py  test_settings.py
frontend/: Dockerfile  package-lock.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: ChatKitPanel.tsx  Home.tsx  LandingPage.tsx  ScheduleContextPanel.tsx
frontend/src/hooks/: useScheduleContext.ts
frontend/src/lib/: config.ts
